fdo#39917: Use correct address convention during search and replace.